# docs/swagger.json
@@ -256,7 +256,7 @@
             }
         },
         "/auth/sign-in": {
-            "get": {
+            "post": {
                 "description": "Login in system",
                 "consumes": [
                     "application/json"
@@ -280,29 +280,27 @@
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created",
+                    "200": {
+                        "description": "token",
                         "schema": {
-                            "type": "integer"
+                            "type": "string"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
-                        "schema": {
-                            "type": "integer"
-                        }
+                        "schema": {}
                     },
                     "404": {
                         "description": "Not Found",
-                        "schema": {
-                            "type": "integer"
-                        }
+                        "schema": {}
                     },
                     "500": {
                         "description": "Internal Server Error",
-                        "schema": {
-                            "type": "integer"
-                        }
+                        "schema": {}
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {}
                     }
                 }
             }
